# ai-tools

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  credential-plan.md  package.json  tasks.md  tasks_e2e.md  workflow-data-persistence-plan.md
.codex/: hooks.json
.fast-browser/: .gitignore
.fast-browser/workflows/web/auth.openai.com/: codex-rotate-account-flow-device-auth.yaml  codex-rotate-account-flow-main.yaml  codex-rotate-account-flow-minimal.yaml  codex-rotate-account-flow-shared.yaml  codex-rotate-account-flow-stepwise.yaml  codex-rotate-account-flow-unified.yaml  codex-rotate-account-flow.yaml  open-auth-url.yaml  openai-signup-probe.yaml
.gemini/: settings.json
.github/hooks/: loopo.json
.loopo/: tasks-shared-persona-rotation-e2e.md
.loopo/quests/persona-lineage-sync-unique-ids/: handoffs.md  tasks.md
.loopo/quests/shared-persona-rotation-e2e/: evidence.md  handoffs.md  tasks.md
.loopo/quests/vm-persona-rotation-e2e/: tasks.md
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml
docs/: live-confidence.md  original-profile-recovery.md
